# rl_sar

./: CONTRIBUTORS.md  README.md  README_CN.md  build.sh  mj_simulator.sh
src/mujoco_simulator/: CMakeLists.txt  config.yaml  readme.md
src/mujoco_simulator/src/: main.cc
src/mujoco_simulator/test/: test_unitree_sdk2.cpp
src/rl_sar/: CMakeLists.txt
src/rl_sar/include/: rl_mj_go2.hpp
src/rl_sar/models/go2/himloco/: config.yaml  recover.pt
src/rl_sar/src/: rl_mj_go2.cpp
src/robots/go2/: go2.xml  scene_terrain.xml
